# FerrOS

./: .gdbinit  .gitignore  .ycm_extra_conf.py  Cargo.toml  Makefile  elf_x86_64_efi.lds  gdb.py  kernel.lds  mkdisk.sh  notes.txt  x86_64-unknown-pintos.json
kernel/: Cargo.toml  Xargo.toml
kernel/src/: apic.rs  asm_routines.rs  lib.rs  once_mut.rs  pit.rs
kernel/src/initialize_once/: mod.rs
kernel/src/interrupt/: idt.rs
kernel/src/interrupts/: mod.rs
kernel/src/palloc/: mod.rs
kernel/src/per_cpu/: mod.rs
kernel/src/threads/: mod.rs
lib/elf/: Cargo.toml
lib/elf/src/: lib.rs  mod.rs
lib/frame_allocator/: Cargo.toml
lib/frame_allocator/src/: lib.rs
lib/gnu-efi/: Cargo.toml
lib/gnu-efi/src/: acpi.rs  bind.rs  def.rs  efilib.rs  err.rs  lib.rs
lib/gnu-efi/src/api/: mod.rs  services.rs  types.rs
lib/gnu-efi/src/api/protocol/: device_path_protocol.rs  device_path_to_text_protocol.rs  file_protocol.rs  load_file2_protocol.rs  load_file_protocol.rs  loaded_image_protocol.rs  mod.rs  simple_file_system_protocol.rs  simple_text_input_protocol.rs  simple_text_output_protocol.rs
lib/mem/: Cargo.toml
lib/mem/src/: lib.rs
lib/page_table/: Cargo.toml
lib/page_table/src/: address.rs  lib.rs  pages.rs
lib/serial/: Cargo.toml
lib/serial/src/: lib.rs
loader/: Cargo.toml  Xargo.toml
loader/src/: lib.rs
loader/src/interrupt/: mod.rs
loader/src/palloc/: mod.rs
src/: efi_main.c  gdb_stub.c  gdb_stub.h  main.rs  trampoline.S
